--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -264,17 +264,21 @@
 
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/cv_trendy_senti"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
                     android:layout_marginTop="8dp"
+                    android:layout_marginEnd="5dp"
                     android:background="@color/gray_600"
                     app:cardCornerRadius="6dp"
-                    app:layout_constraintStart_toStartOf="@+id/tv_trendy"
+                    app:layout_constraintDimensionRatio="1:1"
+                    app:layout_constraintEnd_toStartOf="@id/cv_trendy_drive"
+                    app:layout_constraintStart_toStartOf="@id/tv_trendy"
                     app:layout_constraintTop_toBottomOf="@id/tv_trendy">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:id="@+id/constraintLayout2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
                         <ImageView
                             android:id="@+id/iv_album_cover"
@@ -333,17 +337,22 @@
 
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/cv_trendy_drive"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
                     android:layout_marginEnd="20dp"
                     android:background="@color/gray_600"
                     app:cardCornerRadius="6dp"
+                    app:layout_constraintDimensionRatio="1:1"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/cv_trendy_senti"
                     app:layout_constraintTop_toTopOf="@id/cv_trendy_senti">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:id="@+id/constraintLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:layout_constraintEnd_toEndOf="@+id/cv_trendy_senti"
+                        app:layout_constraintStart_toEndOf="@+id/constraintLayout2">
 
                         <ImageView
                             android:id="@+id/iv_album_drive"
@@ -402,20 +411,23 @@
 
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/cv_trendy_weekend"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="7dp"
+                    android:layout_marginEnd="5dp"
                     android:layout_marginBottom="126dp"
                     android:background="@color/gray_600"
                     app:cardCornerRadius="6dp"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintDimensionRatio="1:1"
+                    app:layout_constraintEnd_toStartOf="@id/cv_trendy_picnic"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/cv_trendy_senti">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
                         <ImageView
                             android:id="@+id/iv_album_weekend"
@@ -474,18 +486,20 @@
 
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/cv_trendy_picnic"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="7dp"
                     android:layout_marginEnd="20dp"
                     android:background="@color/gray_600"
                     app:cardCornerRadius="6dp"
-                    android:layout_marginTop="7dp"
+                    app:layout_constraintDimensionRatio="1:1"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/cv_trendy_weekend"
                     app:layout_constraintTop_toBottomOf="@id/cv_trendy_drive">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
                         <ImageView
                             android:id="@+id/iv_album_picnic"
